# realLab-MagicTools

./: .gitattributes  .gitignore  .npmrc  .prettierignore  AGENTS.md  Cargo.toml  README.md  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.json
.github/workflows/: compile.yml  supply-chain.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_lifecycle.rs  bridge.rs  lib.rs
apps/desktop/src/app/: App.tsx  DesktopLifecycleController.tsx  SupervisorProvider.tsx  ThemeProvider.tsx
apps/desktop/src/features/history/: HistoryPage.tsx  history.css
apps/desktop/src/features/launch-profiles/: ExecutionPreviewPanel.tsx  LaunchProfileEditor.tsx  LaunchProfileList.tsx  LaunchProfilesPage.tsx  launchProfileModel.ts  launchProfiles.css
apps/desktop/src/features/processes/: ProcessInspector.tsx  ProcessLogPanel.tsx  ProcessStopControls.tsx  ProcessTable.tsx  ProcessesPage.tsx  managedLogModel.ts  processInspectorModel.ts  processStopModel.ts  processTableMock.ts  processTableModel.ts  processes.css  useManagedLogController.ts  useProcessStopController.ts
apps/desktop/src/features/projects-rules/: ProjectCatalogPanel.tsx  ProjectsRulesPage.tsx  RuleCatalogPanel.tsx  projectRulesModel.ts  projectsRules.css
apps/desktop/src/features/settings/: SettingsPage.tsx  settings.css  themeOptions.ts
apps/desktop/src/lib/: appLifecycle.ts  diagnostics.ts  launchProfiles.ts  managedExit.ts  managedLogs.ts  processEnrichment.ts  processSnapshotValidation.ts  processStops.ts  projectRules.ts  runHistory.ts  supervisor.ts
apps/desktop/src/styles/: base.css  index.css
crates/discovery/: Cargo.toml
crates/discovery/src/: backend.rs  classification.rs  lib.rs  project.rs  scheduler.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/lifecycle/: Cargo.toml
crates/lifecycle/src/: lib.rs  preview.rs
crates/logging/: Cargo.toml
crates/logging/src/: application.rs  control_filter.rs  diagnostic_export.rs  lib.rs  redaction.rs  retention.rs  secure_directory.rs  text.rs
crates/logging/src/secure_directory/: macos.rs  windows.rs
crates/platform-common/: Cargo.toml
crates/platform-common/src/: credentials.rs  lib.rs  sensitive.rs
crates/platform-macos/: Cargo.toml
crates/platform-macos/src/: credentials.rs  external.rs  lib.rs  macos.rs  managed.rs  native.rs
crates/platform-windows/: Cargo.toml
crates/platform-windows/src/: credentials.rs  external.rs  lib.rs  managed.rs  native.rs  ports.rs  windows.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: async_io.rs  envelope.rs  error.rs  frame.rs  handshake.rs  lib.rs  macos_socket.rs  names.rs  runtime_token.rs  session.rs  windows_pipe.rs
crates/storage/: Cargo.toml
crates/storage/src/: database_path.rs  diagnostics_contract.rs  error.rs  exit_contract.rs  history_contract.rs  lib.rs  migration_recovery.rs  models.rs  platform.rs  profile_contract.rs  project_rule_contract.rs  recovery_contract.rs  repository.rs  retention_contract.rs  run_contract.rs  stop_contract.rs
crates/storage/src/platform/: macos.rs  windows.rs
crates/supervisor/: Cargo.toml
crates/supervisor/src/: catalog_rpc.rs  diagnostics.rs  diagnostics_rpc.rs  enrichment_rpc.rs  exit_rpc.rs  external_stop.rs  history_rpc.rs  lib.rs  log_rpc.rs  macos_unix_socket.rs  managed_runs.rs  profile_credentials.rs  profile_rpc.rs  revision.rs  stop_rpc.rs  windows_named_pipe.rs
crates/supervisor/src/platform/: macos.rs  mod.rs  windows.rs
crates/test-fixtures/: Cargo.toml
crates/test-fixtures/src/: lib.rs
crates/test-fixtures/src/runtime/: authorization.rs  config.rs  deadline.rs  encoding.rs  log_output.rs  mod.rs  network.rs  process_tree.rs
docs/adr/: 0000-adr-template.md  0001-supervisor-ownership.md  0002-process-instance-identity.md  0003-secure-versioned-local-ipc.md  0004-managed-and-external-stop-semantics.md  0005-current-user-permission-scope.md  README.md
docs/architecture/: discovery-performance-baseline.md  implementation-status.md  local-ipc-security-spike.md  macos-process-group-libproc-spike.md  platform-spike-template.md  supervisor-ownership-spike.md  supervisor-runtime-security.md  supply-chain-security.md  system-boundaries.md  windows-job-object-spike.md
experiments/local-ipc-security/: Cargo.toml
experiments/local-ipc-security/src/: lib.rs  macos_socket.rs  windows_pipe.rs
experiments/macos-process-group/: Cargo.toml
experiments/macos-process-group/src/: lib.rs
experiments/supervisor-ownership/: Cargo.toml
experiments/supervisor-ownership/src/: lib.rs
experiments/windows-job-object/: Cargo.toml
experiments/windows-job-object/src/: lib.rs
migrations/: 0001_v1_schema.sql  0002_classification_rule_actions.sql  0003_credential_cleanup_queue.sql  0004_managed_run_process_group.sql  0005_managed_stop_operations.sql  0006_managed_log_retention.sql  0007_catalog_and_history_pagination.sql  0008_catalog_mutation_ledger.sql  0009_managed_exit_operations.sql  0010_profile_mutation_ledger.sql
scripts/: check-js-licenses.mjs  generate_dev_icon.py
security/: js-license-allowlist.json
