[workspace]
resolver = "3"
members = ["apps/desktop/src-tauri", "crates/*"]
exclude = ["experiments/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
publish = false

[workspace.dependencies]
codepage = "=0.1.2"
encoding_rs = "=0.8.35"
getrandom = "=0.3.4"
hmac = "=0.12.1"
libc = "=0.2.186"
oem_cp = { version = "=2.1.2", default-features = false }
rand = "=0.8.5"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.10.9"
sqlx = { version = "=0.9.0", default-features = false, features = ["runtime-tokio", "sqlite-bundled", "migrate", "macros"] }
tauri = "=2.11.5"
tauri-build = "=2.6.3"
thiserror = "=2.0.18"
tokio = "=1.52.3"
ts-rs = { version = "=12.0.1", features = ["serde-compat"] }
unicode-general-category = "=1.1.0"
vte = { version = "=0.15.0", default-features = false }
windows = "=0.61.3"
