[package]
name = "lifecycle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
domain = { path = "../domain" }
platform-common = { path = "../platform-common" }
serde.workspace = true
serde_json.workspace = true
unicode-general-category.workspace = true
