[package]
name = "logging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
codepage.workspace = true
encoding_rs.workspace = true
oem_cp.workspace = true
serde.workspace = true
serde_json.workspace = true
unicode-general-category.workspace = true
vte.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
] }
