[package]
name = "platform-macos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
discovery = { path = "../discovery" }
domain = { path = "../domain" }
libc.workspace = true
lifecycle = { path = "../lifecycle" }
platform-common = { path = "../platform-common" }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
