[package]
name = "protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
domain = { path = "../domain" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "sync", "time"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_RemoteDesktop",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }
