[package]
name = "local-ipc-security-spike"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
rand = "=0.8.5"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.145"
sha2 = "=0.10.9"
thiserror = "=2.0.17"

[target.'cfg(windows)'.dependencies]
windows = { version = "=0.61.3", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[workspace]
