[package]
name = "windows-job-object-spike"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
windows = { version = "=0.61.3", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[workspace]
