[package]
name = "desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
domain = { path = "../../../crates/domain" }
protocol = { path = "../../../crates/protocol" }
serde.workspace = true
serde_json.workspace = true
tauri = { workspace = true, features = ["tray-icon"] }
tokio = { workspace = true, features = ["io-util", "net", "sync", "time"] }
